# mathsoft-esej2

./: .gitignore  CMakeLists.txt  bit_po_bit.cpp  esej.tex  heron_adaptivno.cpp  invsqrt.cpp  literatura.bib  mjerenje.py  sqrt.cpp  sqrt32.cpp
